# pargrep

./: README.md  pgrep  project.cabal
app/: pargrep.hs
test/: patterns
